--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <script src='https://player.live-video.net/1.3.1/amazon-ivs-player.min.js'></script>
   </head>
 
   <body>
